# fucking_alive

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: 20260401_000001_initial_schema.py  20260402_000002_message_event_fields.py  20260410_000003_prompt_runtime_settings.py
app/: __init__.py  main.py  worker.py
app/alerts/: __init__.py  service.py
app/api/routes/: admin_alerts.py  health.py
app/core/: config.py  logging.py
app/db/: session.py
app/db/models/: __init__.py  alert_event.py  app_settings.py  contact.py  email_template.py  message.py  pending_admin_change.py  user.py
app/llm/: __init__.py  factory.py  prompt_regression.py  prompts.py  service.py  types.py
app/llm/providers/: __init__.py  base.py  openai_compatible.py  placeholder.py
app/mail/: __init__.py  sender.py  template.py
app/services/: admin_config_service.py  feishu_admin_service.py  feishu_client.py  feishu_longconn.py  feishu_message_service.py
docker/: Dockerfile
docs/: README.md  configuration.md
tests/: __init__.py  helpers.py  test_admin_api.py  test_admin_config_service.py  test_alerting_service.py  test_feishu_admin_service.py  test_feishu_message_service.py  test_llm_service.py  test_prompt_regression.py  test_worker.py
